@@ -250,6 +250,14 @@ public abstract class Configuration {
         static final String ResourceName = "/org/exolab/castor/castor.properties";
         
         static final String DEFAULT_SERIALIZER_FACTORY = "org.exolab.castor.xml.XercesXMLSerializerFactory";
+
+        /**
+         * Property specifying whether to use ANSI-compliant SQL for MS SQL Server.
+         * <pre>
+         * org.exolab.castor.jdo.sqlserver.ansi-compliant
+         * </pre>
+         */
+        public static final String SqlServerAnsiCompliant = "org.exolab.castor.jdo.sqlserver.ansi-compliant";
     } //-- class: Property
 
 
